--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,7 @@
 
 
 
-    <script src="./scripts/requests.js"></script>
-    <script src="./scripts/hangman.js"></script>
-    <script src="./scripts/app.js"></script>
+    <script src="./scripts/bundle.js"></script>
 </body>
 
 </html>
